// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test should fail 1`] = `
Result {
  "internalMessages": Array [
    "Error: Fatal error",
  ],
  "internalStatus": 3,
}
`;

exports[`Test should run 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 2,
}
`;

exports[`Test should run asynchronously 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 2,
}
`;

exports[`Test should skip 1`] = `
Result {
  "internalMessages": Array [],
  "internalStatus": 4,
}
`;
